--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.5.4", features = ["ws"] }
 clap = { version = "3.1.12", features = ["derive"] }
+env_logger = "0.9.0"
+log = "0.4.16"
 rand = "0.8.5"
 tokio = { version = "1.18.0", features = ["full"] }
