--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.5.4", features = ["ws"] }
 clap = { version = "3.1.12", features = ["derive"] }
+either = "1.6.1"
 env_logger = "0.9.0"
 log = "0.4.16"
 rand = "0.8.5"
