--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ either = "1.6.1"
 env_logger = "0.9.0"
 log = "0.4.16"
 rand = "0.8.5"
+sysinfo = "0.23.10"
 tokio = { version = "1.18.0", features = ["full"] }
