--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,8 @@ either = "1.6.1"
 env_logger = "0.9.0"
 log = "0.4.16"
 rand = "0.8.5"
+serde = { version = "1.0.137", features = ["derive"] }
+serde_urlencoded = "0.7.1"
+serde_with = "1.13.0"
 sysinfo = "0.23.10"
 tokio = { version = "1.18.0", features = ["full"] }
