--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 axum = { version = "0.5.4", features = ["ws"] }
 clap = { version = "3.1.12", features = ["derive"] }
 env_logger = "0.9.0"
+home = "0.5.3"
 log = "0.4.16"
 rand = "0.8.5"
 serde = { version = "1.0.137", features = ["derive"] }
