--- a/remote-uci/Cargo.toml
+++ b/remote-uci/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.5.4", features = ["ws"] }
+btoi = "0.4.2"
 clap = { version = "3.1.12", features = ["derive"] }
 env_logger = "0.9.0"
 home = "0.5.3"
