--- a/remote-uci/Cargo.toml
+++ b/remote-uci/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "remote-uci"
 version = "0.1.0"
+description = "External UCI engine provider for lichess.org"
+repository = "https://github.com/lichess-org/external-engine"
+license = "GPL-3.0+"
+categories = ["command-line-utilities", "games"]
+keywords = ["chess", "lichess"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 axum = { version = "0.5.4", features = ["ws"] }
