--- a/remote-uci-applet/Cargo.toml
+++ b/remote-uci-applet/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2021"
 
 [dependencies]
 clap = "3.1.17"
+env_logger = "0.9.0"
 ksni = "0.2.0"
+log = "0.4.17"
 remote-uci = { path = "../remote-uci" }
 tokio = "1.18.1"
