fetch from official sf

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "stockfish/Stockfish"]
 	path = stockfish/Stockfish
-	url = https://github.com/niklasf/Stockfish.git
+	url = https://github.com/official-stockfish/Stockfish.git
