add copyright info to debian package

--- a/stockfish/Dockerfile
+++ b/stockfish/Dockerfile
@@ -19,8 +19,7 @@ ENV CXX=/x86_64-linux-musl-native/bin/x86_64-linux-musl-g++
 ENV STRIP=/x86_64-linux-musl-native/bin/strip
 
 RUN cd /Stockfish-sf_15/src; \
-    #for arch in "x86-64-vnni512" "x86-64-avx512" "x86-64-bmi2" "x86-64-avx2" "x86-64-sse41-popcnt" "x86-64-ssse3" "x86-64-sse3-popcnt" "x86-64"; do \
-    for arch in "x86-64-bmi2"; do \
+    for arch in "x86-64-vnni512" "x86-64-avx512" "x86-64-bmi2" "x86-64-avx2" "x86-64-sse41-popcnt" "x86-64-ssse3" "x86-64-sse3-popcnt" "x86-64"; do \
         LDFLAGS=-static CXXFLAGS=-DNNUE_EMBEDDING_OFF make -B profile-build COMP=gcc CXX=${CXX} ARCH=${arch} EXE=stockfish-${arch}; \
         ${STRIP} stockfish-${arch}; \
     done
