--- a/remote-uci/Cargo.toml
+++ b/remote-uci/Cargo.toml
@@ -20,5 +20,6 @@ rand = "0.8.5"
 serde = { version = "1.0.137", features = ["derive"] }
 serde_urlencoded = "0.7.1"
 serde_with = "1.13.0"
+shakmaty = "0.21.1"
 sysinfo = "0.23.10"
 tokio = { version = "1.18.0", features = ["full"] }
