--- a/remote-uci/Cargo.toml
+++ b/remote-uci/Cargo.toml
@@ -14,6 +14,7 @@ clap = { version = "3.1.12", features = ["derive"] }
 env_logger = "0.9.0"
 home = "0.5.3"
 hyper = "0.14.18"
+listenfd = "1.0.0"
 log = "0.4.16"
 memchr = "2.5.0"
 rand = "0.8.5"
