--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: docker/setup-buildx-action@v1
       - uses: docker/build-push-action@v3
         with:
-          context: .
+          context: stockfish
           file: stockfish/Dockerfile
           cache-from: type=gha
           cache-to: type=gha
