--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,9 +24,8 @@ jobs:
           file: stockfish/Dockerfile
           cache-from: type=gha
           cache-to: type=gha
-          load: true
           tags: stockfish
-      - run: docker cp stockfish:/stockfish_15-1_amd64.deb .
+      - run: docker cp $(docker create stockfish):/stockfish_15-1_amd64.deb .
       - uses: actions/upload-artifact@v3
         with:
           name: stockfish
