ci: tag stockfish:latest

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
           file: stockfish/Dockerfile
           cache-from: type=gha
           cache-to: type=gha
-          tags: stockfish
+          tags: stockfish:latest
       - run: docker cp $(docker create stockfish):/stockfish_15-1_amd64.deb .
       - uses: actions/upload-artifact@v3
         with:
