--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,3 +31,21 @@ jobs:
         with:
           name: stockfish
           path: stockfish_15-1_amd64.deb
+  remote-uci:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: x86_64-unknown-linux-musl
+          profile: minimal
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --release --manifest-path remote-uci/Cargo.toml
+      - uses: actions/upload-artifact@v3
+        with:
+          name: remote-uci
+          path: remote-uci/target/release/remote-uci
