add common Dockerfile

--- a/stockfish/.gitignore
+++ b/stockfish/.gitignore
@@ -1,6 +1,1 @@
-sde-external-9.0.0-2021-11-07-lin.tar.xz
-x86_64-linux-musl-native.tgz
-sf_15.tar.gz
-nn-6877cd24400e.nnue
-
-stockfish_15-1_amd64.deb
+vendor
