--- a/remote-uci/usr/share/applications/remote-uci.desktop
+++ b/remote-uci/usr/share/applications/remote-uci.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Name=External Engine for Lichess
 GenericName=Chess analysis
-URL=xdg-open http://localhost:9670/
+Exec=xdg-open http://localhost:9670/
 Icon=lichess
 Categories=Game;
 Keywords=chess;uci;
