--- a/remote-uci/DEBIAN/control
+++ b/remote-uci/DEBIAN/control
@@ -4,6 +4,7 @@ Architecture: amd64
 Section: games
 Priority: optional
 Maintainer: Niklas Fiekas <niklas@lichess.org>
+Pre-Depends: init-system-helpers
 Depends: stockfish
 Description: External engine for Lichess
  Allows using UCI engines running outside of the browser for analysis on
