--- a/remote-uci/usr/lib/systemd/system/remote-uci.service
+++ b/remote-uci/usr/lib/systemd/system/remote-uci.service
@@ -3,7 +3,7 @@ Description=External engine for Lichess
 Requires=remote-uci.socket
 
 [Service]
-ExecStart=/usr/bin/remote-uci stockfish
+ExecStart=/usr/bin/remote-uci --secret-file /etc/remote-uci.secret stockfish
 
 PrivateTmp=yes
 PrivateDevices=yes
