--- a/remote-uci/Cargo.toml
+++ b/remote-uci/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "remote-uci"
-version = "1.0.0"
+version = "1.0.0-alpha.0"
 description = "External UCI engine provider for lichess.org"
 repository = "https://github.com/lichess-org/external-engine"
 license = "GPL-3.0+"
@@ -22,7 +22,7 @@ serde = { version = "1.0.137", features = ["derive"] }
 serde_urlencoded = "0.7.1"
 serde_with = "1.13.0"
 shakmaty = { version = "0.21.1", features = [] }
-sysinfo = "0.23.10"
+sysinfo = "0.24.5"
 thiserror = "1.0.31"
 tokio = { version = "1.18.0", features = ["full"] }
 
