--- a/remote-uci/Cargo.toml
+++ b/remote-uci/Cargo.toml
@@ -26,5 +26,8 @@ sysinfo = "0.24.5"
 thiserror = "1.0.31"
 tokio = { version = "1.18.0", features = ["full"] }
 
+[target.'cfg(target_arch = "x86_64")'.dependencies]
+raw-cpuid = "10.3.0"
+
 [profile.release]
 strip = true
