--- a/remote-uci/Cargo.toml
+++ b/remote-uci/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "remote-uci"
-version = "1.0.0-alpha.2"
+version = "1.0.0"
 description = "External UCI engine provider for lichess.org"
 repository = "https://github.com/lichess-org/external-engine"
 license = "GPL-3.0+"
