--- a/remote-uci/Cargo.toml
+++ b/remote-uci/Cargo.toml
@@ -23,9 +23,11 @@ serde = { version = "1.0.137", features = ["derive"] }
 serde_urlencoded = "0.7.1"
 serde_with = "1.13.0"
 shakmaty = "0.21.2"
+simple-logging = "2.0.2"
 sysinfo = "0.24.5"
 thiserror = "1.0.31"
 tokio = { version = "1.18.0", features = ["full"] }
+win-service-logger = "0.1.0"
 
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
