--- a/remote-uci-service/Cargo.toml
+++ b/remote-uci-service/Cargo.toml
@@ -14,3 +14,6 @@ remote-uci = { path = "../remote-uci" }
 tokio = { version = "1.0", features = ["sync"] }
 windows-service = "0.4.0"
 simple-logging = "2.0.2"
+log = "0.4.17"
+clap = "3.2.8"
+listenfd = "1.0.0"
