--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,30 @@ jobs:
           path: |
             stockfish_15-1_amd64.deb
             remote-uci_1-1_amd64.deb
+  windows:
+    runs-on: windows-2019
+    defaults:
+      run:
+        shell: msys2 {0}
+    steps:
+      - uses: msys2/setup-msys2@v2
+        with:
+          msystem: mingw64
+          install: mingw-w64-x86_64-gcc mingw-w64-x86_64-rust mingw-w64-x86_64-make tar
+      - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+        with:
+          repository: lichess-org/intel-sde
+          ssh-key: ${{ secrets.ID_RSA_INTEL_SDE }}
+          ref: main
+          path: intel-sde
+        id: sde
+        continue-on-error: true
+        if: startsWith(github.ref, 'refs/tags/v')
+      - run: |
+          tar xf intel-sde/sde-external-9.0.0-2021-11-07-win.tar.xz && echo SDE_PATH=$(cygpath -u $GITHUB_WORKSPACE)/sde-external-9.0.0-2021-11-07-win/sde.exe | tee $GITHUB_ENV
+          echo PGO=profile- | tee $GITHUB_ENV
+        if: steps.sde.outcome == 'success'
   release:
     runs-on: ubuntu-latest
     needs:
