--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,8 +106,9 @@ jobs:
         with:
           name: external-engine-debian
       - run: sudo apt-get install -y reprepro
-      - run: reprepro --basedir gh-pages/debian includedeb bullseye external-engine-debian/stockfish_*_amd64.deb
-      - run: reprepro --basedir gh-pages/debian includedeb bullseye external-engine-debian/remote-uci_*_amd64.deb
+      - run: ls -R
+      - run: reprepro --basedir gh-pages/debian includedeb bullseye stockfish_*_amd64.deb
+      - run: reprepro --basedir gh-pages/debian includedeb bullseye remote-uci_*_amd64.deb
       - run: |
           cd gh-pages &&
           git init --initial-branch gh-pages &&
