add libexternalengine to workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["remote-uci", "remote-uci-service"]
+members = ["remote-uci", "remote-uci-service", "libexternalengine"]
 
 [profile.release]
 strip = true
